fix(sbb-title): fix spacing between sbb-title and paragraph

--- a/src/global/styles/typography.scss
+++ b/src/global/styles/typography.scss
@@ -51,3 +51,7 @@ html {
 .sbb-legend {
   @include typo.legend;
 }
+
+.sbb-title + p {
+  margin-block-start: 0;
+}
